--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.0",
     "react-speech-kit": "^3.0.1",
+    "react-tooltip": "^5.29.0",
     "sweetalert2": "^11.22.0"
   },
   "devDependencies": {
